# cutlass-cute-playground

./: .gitignore  Makefile  README.md  bench_flash_attention.py  bench_hgemm.py  bench_sgemm.py  bench_utils.py  check_flash_attention.py  check_hgemm.py  check_sgemm.py  ncu_profile.sh  plot_hgemm.py  plot_sgemm.py
CUDA/: CMakeLists.txt  share.cuh
CUDA/flash_attention/: flash_attention_naive.cuh  flash_attention_register.cuh  flash_attention_v1.cuh  flash_attention_v2.cuh  instantiate.cu  notes.md
CUDA/hgemm/: hgemm_cluster.cuh  hgemm_epilogue.cuh  hgemm_multistage.cuh  hgemm_optimized.cuh  hgemm_persistent.cuh  hgemm_tma.cuh  hgemm_warp_specialization.cuh  hgemm_wgmma_tma.cuh  hgemm_wmma.cuh  instantiate.cu  ptx_wrapper.cuh  scheduler.cuh
CUDA/sgemm/: instantiate.cu  sgemm_double_buffering.cuh  sgemm_naive.cuh  sgemm_smem.cuh  sgemm_tiling.cuh  sgemm_tiling_vectorize.cuh  sgemm_vectorize.cuh  sgemm_warptiling.cuh  sgemm_warptiling_vectorize.cuh
CUTLASS/: CMakeLists.txt
CUTLASS/flash_attention/: flash_attention_fa3.cuh  flash_attention_mma.cuh  flash_attention_multistage.cuh  flash_attention_naive.cuh  flash_attention_pregs.cuh  flash_attention_register.cuh  flash_attention_tma.cuh  flash_attention_wgmma.cuh  flash_attention_wsp.cuh  instantiate.cu
CUTLASS/hgemm/: hgemm_cluster.cuh  hgemm_epilogue.cuh  hgemm_mma.cuh  hgemm_multistage.cuh  hgemm_optimized.cuh  hgemm_persistent.cuh  hgemm_tma.cuh  hgemm_warp_specialization.cuh  hgemm_wgmma.cuh  hgemm_wgmma_cluster.cuh  hgemm_wgmma_tma.cuh  hgemm_wmma.cuh  hgemm_wmma_ldmatrix.cuh  instantiate.cu
CUTLASS/sgemm/: instantiate.cu  sgemm_double_buffering.cuh  sgemm_naive.cuh  sgemm_smem.cuh  sgemm_tiling.cuh  sgemm_tiling_vectorize.cuh  sgemm_vectorize.cuh  sgemm_warptiling.cuh  sgemm_warptiling_vectorize.cuh
CuTeDSL/hgemm/: hgemm_cluster.py  hgemm_epilogue.py  hgemm_mma.py  hgemm_mma_ldmatrix.py  hgemm_multistage.py  hgemm_optimized.py  hgemm_persistent.py  hgemm_tma.py  hgemm_warp_specialization.py  hgemm_wgmma.py  hgemm_wgmma_tma.py  instantiate.py
CuTeDSL/sgemm/: instantiate.py  sgemm_naive.py  sgemm_smem.py  sgemm_tiling.py  sgemm_tiling_vectorize.py  sgemm_vectorize.py
bench_results/: bench_hgemm_4096x4096x4096.csv  bench_sgemm_4096x4096x4096.csv
tools/: autotune.py  autotune_hgemm.py  bank_conflict.py  mma_copy_layout.py
triton/flash_attention/: flash_attention.py  flash_attention_autotune.py
triton/gemm/: gemm.py  gemm_autotune.py  gemm_fp8.py  gemm_fp8_autotune.py  gemm_persistent.py  gemm_persistent_autotune.py
